Theme and Localization
Setting up the groundwork for Localization and Changing Themes, also added little favicon

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>Simple Tasks - Charm (Chakra-UI, React, MeteorJS)</title>
+  <link rel="icon" type="image/x-icon" href="https://nodejs.org/static/images/favicons/favicon-32x32.png">
   <meta charset="utf-8"/>
   <meta property="og:title" content="Simple Tasks - Charm (Chakra-UI, React, MeteorJS)">
   <meta name="author" content="Frederico Maia - @fredmaiaarantes">
